--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
     path: ../flutter_frameworks/pages
   g_firestore:
     path: ../flutter_frameworks/firestore
+  g_file_storage:
+    path: ../flutter_frameworks/file_storage
   g_auths:
     path: ../flutter_frameworks/auths
   g_components:
@@ -31,6 +33,11 @@ dependencies:
   flutter_ogg_piano: ^1.1.3
   just_audio: ^0.9.30
   audioplayers: ^0.20.1
+  tekartik_midi:
+    git:
+      url: https://github.com/tekartik/midi.dart
+      ref: dart2_3
+  file_picker: ^5.2.2
 
 
 dev_dependencies:
